# metl-pretrained

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: compile_huggingface.yml  test.yml
huggingface/: README.md  combine_files.py  huggingface_code.py  huggingface_wrapper.py  print_colab_dropdown.py  push_to_hub.py  requirements.txt
metl/: encode.py  main.py  model_encoder.py  models.py  relative_attention.py  test.py  test2.py  test3.py  test4.py
metl-pretrained/: __init__.py  main.py  models.py  relative_attention.py  structure.py
notebooks/: dir.txt  encoder.pt  inference.ipynb  test_validation.ipynb  test_validation.py
