[metadata]
name = metl-pretrained
version = 0.1
description = Mutational effect transfer learning pretrained models
url = https://github.com/gitter-lab/metl-pretrained
author = Sam Gelman
author_email = sgelman2@wisc.edu
license = MIT

[options]
packages=find:
install_requires =
    torch
    numpy
    scipy
    biopandas
    networkx
